--- a/_mixins.scss
+++ b/_mixins.scss
@@ -1,6 +1,6 @@
 @import
     "compass",
-    "mixins/prefixRule",
+    "mixins/prefix-rule",
     "mixins/tools-size",
     "mixins/tools-shape",
     "mixins/inline-block-fix";
