--- a/mixins/_prefix-rule.scss
+++ b/mixins/_prefix-rule.scss
@@ -2,12 +2,12 @@
  * Prfixes a rulename with your prefered prefix.
  * Can also be used to create placeholder and normal classes
  *
- * prefixRules( $ruleName,$prefixes )
+ * prefix-rules( $ruleName,$prefixes )
  * @type {[string/list]} $ruleName class or/and placeholder name
  * @type {[list]} $refixes selector slug
  *
  * usage:
- *  @include prefixRule( "foo", ".l-" ".is-" "%" ) {
+ *  @include prefix-rule( "foo", ".l-" ".is-" "%" ) {
  *      margin: 20px;
  *  }
  * generates:
@@ -18,7 +18,7 @@
  */
 $default-selector-prefixes: "%" "." !default;
 
-@mixin prefixRule ( $ruleNames, $prefixes: $default-selector-prefixes) {
+@mixin prefix-rule ( $ruleNames, $prefixes: $default-selector-prefixes) {
     $rules: "";
     @each $ruleName in $ruleNames {
         @each $prefix in $prefixes {
