adds dependency for the position tools

--- a/_mixins.scss
+++ b/_mixins.scss
@@ -3,4 +3,5 @@
     "mixins/prefix-rule",
     "mixins/tools-size",
     "mixins/tools-shape",
+    "mixins/tools-position",
     "mixins/inline-block-fix";
