fixes options in base that where not exisiting

--- a/_0.settings.scss
+++ b/_0.settings.scss
@@ -3,6 +3,11 @@
  */
 
 $s-font-base: 16px !default;
+$s-font-line-height-base: 1.5 !default;
+
+$t-font-family: "Sans serif" !default;
+
 $s-design-width: 1024px !default;
 $s-golden: 1.61803398875 !default;
 $s-gutter: 20px !default;
+
