--- a/_1.base.scss
+++ b/_1.base.scss
@@ -3,7 +3,7 @@
  */
 html {
     min-height:100%;
-    font:#{($base-font-size/16px)*1em}/#{$line-height-ratio} $base-font-family;
+    font:#{($s-font-base/16px)*1em}/#{$s-font-line-height-base} $t-font-family;;
     -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
     overflow-y:scroll;
