The icons halelper is now a proper mixin that is option

--- a/_mixins.scss
+++ b/_mixins.scss
@@ -4,4 +4,5 @@
     "mixins/tools-size",
     "mixins/tools-shape",
     "mixins/tools-position",
+    "mixins/tools-icons",
     "mixins/inline-block-fix";
