updates bonescss to h5bp v5.0.0

--- a/_1.base.scss
+++ b/_1.base.scss
@@ -33,11 +33,13 @@ strong {
 
 
 /*
- * Remove the gap between images, videos, audio and canvas and the bottom of
- * their containers: h5bp.com/i/440
+ * Remove the gap between audio, canvas, iframes,
+ * images, videos and the bottom of their containers:
+ * https://github.com/h5bp/html5-boilerplate/issues/440
  */
 audio,
 canvas,
+iframe,
 img,
 svg,
 video {
