Inline-block fix mixin now does not support IE8 anymore
fixes #4

--- a/mixins/_inline-block-fix.scss
+++ b/mixins/_inline-block-fix.scss
@@ -3,6 +3,6 @@ $s-font-base: 16px !default;
 @mixin inline-block-fix($s: $s-font-base){
 	font-size: 0.1px;
 	> * {
-		@include font-size($s);
+		font-size: $s;
 	}
 }
