Fixes unit for ruby sass.
and makes sure it still works for libsass. Fixes #7 
http://sassmeister.com/gist/12595fb2b6b2e4b3ed07

--- a/mixins/_tools-size.scss
+++ b/mixins/_tools-size.scss
@@ -44,7 +44,7 @@
     $return: null;
     @each $val in $px {
       @if type-of($val) == number and unit($val) == 'px' {
-        $return: append($return, ( $val / $baseSize ) * 1) + #{$unit};
+        $return: append($return, ( $val / $baseSize ) * 1) + $unit;
       } @else {
         $return: append($return, $val);
       }
