--- a/_5.states.scss
+++ b/_5.states.scss
@@ -3,8 +3,9 @@
  */
 $state-selectors: "%is-" ".is-" !default;
 $state-selectors-and: "&%is-" "&.is-" !default;
+$state-classes: true !default;
 
-@include prefix-rule( "visuallyhidden", $prefixes: $state-selectors ) {
+@mixin visuallyhidden {
     border: 0;
     clip: rect(0 0 0 0);
     height: 1px;
@@ -13,19 +14,27 @@ $state-selectors-and: "&%is-" "&.is-" !default;
     padding: 0;
     position: absolute;
     width: 1px;
+}
+@mixin visuallyhidden-focusable {
+    &:active, &:focus {
+        clip: auto;
+        height: auto;
+        margin: 0;
+        overflow: visible;
+        position: static;
+        width: auto;
+    }
+}
 
-    /*
-     * Extends the .visuallyhidden class to allow the element to be focusable
-     * when navigated to via the keyboard: h5bp.com/p
-     */
-    @include prefix-rule( "focusable", $prefixes: $state-selectors-and ) {
-        &:active, &:focus {
-            clip: auto;
-            height: auto;
-            margin: 0;
-            overflow: visible;
-            position: static;
-            width: auto;
+@if $state-classes {
+    @include prefix-rule( "visuallyhidden", $prefixes: $state-selectors ) {
+        @include visuallyhidden;
+        /*
+         * Extends the .visuallyhidden class to allow the element to be focusable
+         * when navigated to via the keyboard: h5bp.com/p
+         */
+        @include prefix-rule( "focusable", $prefixes: $state-selectors-and ) {
+            @include visuallyhidden-focusable;
         }
     }
 }
@@ -33,24 +42,36 @@ $state-selectors-and: "&%is-" "&.is-" !default;
 /*
  * Hide visually and from screen readers, but maintain layout
  */
-@include prefix-rule( "invisible", $prefixes: $state-selectors ) {
-    visibility: hidden;
+@if $state-classes {
+    @include prefix-rule( "invisible", $prefixes: $state-selectors ) {
+        visibility: hidden;
+    }
 }
 
 /*
  * Generic class to disable buttons and links
  */
-@include prefix-rule( "disabled", $prefixes: $state-selectors ) {
+@mixin disabled {
     opacity: 0.5;
     pointer-events: none;
+}
+@if $state-classes {
+    @include prefix-rule( "disabled", $prefixes: $state-selectors ) {
+        @include disabled;
+    }
 }
 
 /*
  * Hide visually and from screen readers: h5bp.com/u
  */
-@include prefix-rule( "hidden", $prefixes: $state-selectors ) {
+@mixin hidden {
     display: none !important;
     visibility: hidden;
+}
+@if $state-classes {
+    @include prefix-rule( "hidden", $prefixes: $state-selectors ) {
+        @include hidden;
+    }
 }
 
 /**
@@ -58,31 +79,38 @@ $state-selectors-and: "&%is-" "&.is-" !default;
  * will be set to inherit by default, but can be block inline or inline-block as well,
  * just use the modifiers
  */
-@include prefix-rule( "visible", $prefixes: $state-selectors ) {
+@mixin visible {
     display: inherit !important;
     visibility: visible;
-    &--block {
-        display: block !important;
-    }
-    &--inline {
-        display: inline !important;
-    }
-    &--inline-block {
-        display: inline-block !important;
+}
+@if $state-classes {
+    @include prefix-rule( "visible", $prefixes: $state-selectors ) {
+        @include visible;
+        &--block {
+            display: block !important;
+        }
+        &--inline {
+            display: inline !important;
+        }
+        &--inline-block {
+            display: inline-block !important;
+        }
     }
 }
 
 /* generic loading class */
-@include prefix-rule( "loading", $prefixes: $state-selectors ) {
-    pointer-events: none;
-    opacity: 0.5;
+@if $state-classes {
+    @include prefix-rule( "loading", $prefixes: $state-selectors ) {
+        pointer-events: none;
+        opacity: 0.5;
 
-    animation: pulse 2s infinite;
-}
+        animation: pulse 2s infinite;
+    }
 
-@keyframes pulse {
-  0%   { opacity: 0.2; }
-  50%  { opacity: 0.6; }
-  100% { opacity: 0.2; }
+    @keyframes pulse {
+      0%   { opacity: 0.2; }
+      50%  { opacity: 0.6; }
+      100% { opacity: 0.2; }
+    }
 }
 
