--- a/mixins/_tools-size.scss
+++ b/mixins/_tools-size.scss
@@ -40,7 +40,7 @@
  * @param  {[number]} $unit of the converted value
  * @return {[number]} Relative value inc. unit
  */
-@function px2rel($px, $baseSize: $s-font-base, $unit: rem) {
+@function px2rel($px, $baseSize: $t-default-font-size, $unit: rem) {
     $return: null;
     @each $val in $px {
       @if type-of($val) == number and unit($val) == 'px' {
@@ -58,7 +58,7 @@
  * @param   {[number]} $baseSize      multiplicator
  * @returns {[number]}                value in px
  */
-@function rel2px($rel, $baseSize: $s-font-base) {
+@function rel2px($rel, $baseSize: $t-default-font-size) {
   $return: null;
     @each $val in $rel {
       @if type-of($val) == number and isRelative($val) {
